# myblog

./: .env.development  .gitignore  PET_ATLAS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
backend/: .env.example  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth_phase3.py  0003_interactions.py  0004_integrations.py  0005_media.py  0006_analytics.py  0007_danger.py  0008_event_log_archive.py  0009_drop_avatar_path.py  0010_pet_multi_provider.py  0011_pet_add_deepseek.py  0012_add_pet_message.py  0013_pet_smart_interaction.py  0014_api_token_usage_count.py  (+6 more)
backend/app/: cli.py  config.py  db.py  deps.py  errors.py  logging_config.py  main.py  middleware.py  redis.py
backend/scripts/: bootstrap-test-db.sh
backend/tests/: conftest.py  test_admin_activity.py  test_admin_analytics.py  test_admin_auth.py  test_admin_comments.py  test_admin_danger.py  test_admin_danger_import.py  test_admin_email_change.py  test_admin_integrations.py  test_admin_media.py  test_admin_notify_prefs.py  test_admin_now.py  test_admin_password_change.py  test_admin_pet.py  test_admin_pet_conversations.py  test_admin_pet_defaults.py  test_admin_posts.py  test_admin_site.py  test_admin_taxonomy.py  test_alembic_0004_roundtrip.py  test_alembic_0005_roundtrip.py  test_alembic_0006_roundtrip.py  test_alembic_0007_roundtrip.py  test_alembic_0008_roundtrip.py  test_alembic_0010_roundtrip.py  test_alembic_0011_roundtrip.py  test_analytics_rollup.py  test_analytics_service.py  test_api_tokens.py  test_arq_send_email.py  test_auth.py  test_auth_2fa.py  test_auth_magic_link.py  test_auth_recovery_codes.py  test_auth_refresh.py  test_avatar_derive.py  test_client_ip.py  test_config.py  test_danger_service.py  test_danger_tasks.py  (+51 more)
cli/: .gitignore  README.md  pyproject.toml
cli/myblog/: __main__.py  config.py  http.py  output.py  safety.py  ssh.py
cli/tests/: conftest.py  test_config.py  test_http.py  test_output.py  test_safety.py  test_ssh.py
(+334 files in other folders)
