[project]
name = "myblog-backend"
version = "0.1.0"
description = "wangyang.dev backend — FastAPI + Postgres + Redis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "mistune>=3",
    "python-frontmatter>=1.1",
    "argon2-cffi>=23",
    "pyotp>=2.9",
    "segno>=1.6",
    "cryptography>=44",
    "pyjwt>=2.10",
    "typer>=0.15",
    "structlog>=24",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-postgresql>=6",
    "fakeredis>=2.26",
    "httpx>=0.28",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
myblog = "app.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "data*", "posts*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
]
