[project]
name = "myblog-cli"
version = "0.1.0"
description = "CLI for managing the MyBlog admin (HTTP + ssh deploy)"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.15",
  "httpx>=0.28",
  "rich>=13",
  "tomli-w>=1.1",
  "python-frontmatter>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "freezegun>=1.5",
]

[project.scripts]
myblog = "myblog.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myblog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
